# HNSW-Attribute-Filtering-Optimization

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
apps/: benchmark.cpp  verify.cpp
include/anf/: dataset.hpp  filter.hpp  ground_truth.hpp
include/anf/attributes/: blocked_bitset.hpp  linear_bitset.hpp  roaring_set.hpp
include/anf/bench/: stats.hpp  timer.hpp
scripts/: install_deps.sh  plot_results.py  run_benchmarks.sh
tests/: test_dataset.cpp  test_filter.cpp  test_ground_truth.cpp  test_representations.cpp
